--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Matching application for Blok Tech (Team 4)",
   "main": "index.js",
   "scripts": {
-    "test": "node index"
+    "test": "node index",
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
   "homepage": "https://github.com/DeefDeMeef/blok-tech-team4#readme",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "mongoose": "^5.12.0"
   },
