--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express-flash": "0.0.2",
     "express-session": "^1.17.1",
     "mongoose": "^5.12.0",
+    "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0"
