--- a/package.json
+++ b/package.json
@@ -30,14 +30,17 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-ejs": "^2.0.0",
     "express-flash": "0.0.2",
     "express-session": "^1.17.1",
+    "express-sessions": "^1.0.6",
     "mongoose": "^5.12.0",
     "multer": "^1.4.2",
+    "nodemailer": "^6.5.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0"
