--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "nodemailer": "^6.5.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.1.0"
+    "passport-local-mongoose": "^6.1.0",
+    "socket.io": "^4.0.0"
   },
   "devDependencies": {
     "eslint": "^7.22.0",
@@ -51,4 +52,3 @@
     "sass": "^1.32.8"
   }
 }
-
